# RandLib

./: .gitignore  .travis.yml  BasicRandGenerator.cpp  BasicRandGenerator.h  BetaRand.h  CMakeLists.txt  CauchyRand.cpp  CauchyRand.h  ChiSquaredRand.h  ExponentialRand.h  FisherSnedecorRand.cpp  FisherSnedecorRand.h  GammaRand.h  LICENSE  LaplaceRand.cpp  LaplaceRand.h  LevyRand.cpp  LevyRand.h  LogNormalRand.cpp  LogNormalRand.h  Makefile  Makefile.Debug  Makefile.Release  NormalRand.cpp  NormalRand.h  README.md  RandLib.pro  RandLib_global.h  RandMath.cpp  RandMath.h  RandomGenerators.h  RandomVariable.cpp  RandomVariable.h  StableRand.cpp  StableRand.h  StudentTRand.cpp  StudentTRand.h  UniformRand.cpp  UniformRand.h  object_script.RandLib.Debug  (+6 more)
EconometricsEngineer/: EconometricsEngineer.cpp  EconometricsEngineer.h
continuous/: BetaRand.cpp  BetaRand.h  CauchyRand.cpp  CauchyRand.h  ChiSquaredRand.cpp  ChiSquaredRand.h  ContinuousRand.h  ErlangRand.h  ExponentialRand.cpp  ExponentialRand.h  FisherSnedecorRand.cpp  FisherSnedecorRand.h  GammaRand.cpp  GammaRand.h  LaplaceRand.cpp  LaplaceRand.h  LevyRand.cpp  LevyRand.h  LogNormalRand.cpp  LogNormalRand.h  LogisticRand.cpp  LogisticRand.h  NormalRand.cpp  NormalRand.h  ParetoRand.cpp  ParetoRand.h  RayleighRand.h  StableRand.cpp  StableRand.h  StudentTRand.cpp  StudentTRand.h  TriangularRand.cpp  TriangularRand.h  UniformRand.cpp  UniformRand.h
cov-int/: BUILD.metrics.xml  build-cwd.txt  build-id.txt  build-log.txt  build-timings.txt
cov-int/emit/: version
discrete/: DiscreteRand.cpp  DiscreteRand.h  PoissonRand.cpp  PoissonRand.h  UniformDiscreteRand.cpp  UniformDiscreteRand.h
distributions/: BasicRandGenerator.cpp  BasicRandGenerator.h  Distributions.h  ProbabilityDistribution.cpp  ProbabilityDistribution.h  ProbabilityDistributions.h  RandLib.h  RandomVariable.cpp  RandomVariable.h  RandomVariables.h  UnivariateProbabilityDistribution.h
distributions/bivariate/: BivariateDistribution.cpp  BivariateDistribution.h  BivariateNormalRand.cpp  BivariateNormalRand.h  BivariateProbabilityDistribution.cpp  BivariateProbabilityDistribution.h  ContinuousBivariateDistribution.cpp  ContinuousBivariateDistribution.h  DiscreteBivariateDistribution.cpp  DiscreteBivariateDistribution.h  NormalInverseGammaRand.cpp  NormalInverseGammaRand.h  TrinomialRand.cpp  TrinomialRand.h
distributions/continuous/: ArcsineRand.cpp  ArcsineRand.h  BetaPrimeRand.h  BetaRand.cpp  BetaRand.h  CauchyRand.cpp  CauchyRand.h  ChiSquaredRand.cpp  ChiSquaredRand.h  ContinuousDistribution.cpp  ContinuousDistribution.h  ContinuousRand.cpp  ContinuousRand.h  ErlangRand.cpp  ErlangRand.h  ExponentialRand.cpp  ExponentialRand.h  FisherSnedecorRand.cpp  FisherSnedecorRand.h  FrechetRand.h  GammaRand.cpp  GammaRand.h  GeometricStableRand.cpp  GeometricStableRand.h  GumbelRand.h  InverseGammaRand.cpp  IrwinHallRand.h  LaplaceRand.cpp  LaplaceRand.h  LevyRand.cpp  LevyRand.h  LogNormalRand.cpp  LogNormalRand.h  LogisticRand.cpp  LogisticRand.h  MaxwellBoltzmannRand.cpp  MaxwellBoltzmannRand.h  NakagamiRand.h  NormalRand.cpp  NormalRand.h  (+20 more)
distributions/discrete/: BernoulliRand.cpp  BinomialRand.cpp  BinomialRand.h  DiscreteDistribution.cpp  DiscreteDistribution.h  DiscreteRand.cpp  DiscreteRand.h  GeometricRand.cpp  GeometricRand.h  HyperGeometricRand.h  LogarithmicRand.cpp  LogarithmicRand.h  NegativeBinomialRand.cpp  NegativeBinomialRand.h  PoissonRand.cpp  PoissonRand.h  RademacherRand.cpp  RademacherRand.h  SkellamRand.h  UniformDiscreteRand.cpp  UniformDiscreteRand.h  YuleRand.h  ZetaRand.h  ZipfRand.cpp  ZipfRand.h
distributions/multivariate/: BivariateNormalRand.cpp  BivariateNormalRand.h  BivariateProbabilityDistribution.cpp  BivariateProbabilityDistribution.h  MultivariateProbabilityDistribution.cpp  MultivariateProbabilityDistribution.h  NormalInverseGammaRand.cpp  NormalInverseGammaRand.h
distributions/singular/: CantorRand.h  SingularDistribution.cpp  SingularDistribution.h
distributions/univariate/: BasicRandGenerator.cpp  BasicRandGenerator.h  CompoundDistribution.cpp  CompoundDistribution.h  CompoundRand.cpp  CompoundRand.h  ExponentialFamily.cpp  ExponentialFamily.h  SumRand.cpp  SumRand.h  UnivariateDistribution.cpp  UnivariateDistribution.h  UnivariateProbabilityDistribution.cpp  UnivariateProbabilityDistribution.h
documentation/: document.aux  document.tex  document.toc
math/: BetaMath.cpp  BetaMath.h  Constants.h  GammaMath.cpp  GammaMath.h  Matrix.cpp  Matrix.h  NumericMath.cpp  NumericMath.h  RandMath.cpp  RandMath.h  SquareMatrix.cpp  SquareMatrix.h  betamath.cpp  betamath.h  gammamath.cpp  gammamath.h  numericmath.cpp  numericmath.h
processes/: BrownianMotion.cpp  BrownianMotion.h  CauchyProcess.cpp  CauchyProcess.h  CompoundPoissonProcess.cpp  CompoundPoissonProcess.h  CoxIngersollRossProcess.cpp  CoxIngersollRossProcess.h  GeometricBrownianMotion.cpp  GeometricBrownianMotion.h  HestonProcess.cpp  HestonProcess.h  JumpDiffusionProcess.cpp  JumpDiffusionProcess.h  OrnsteinUhlenbeckProcess.cpp  OrnsteinUhlenbeckProcess.h  PoissonProcess.cpp  PoissonProcess.h  StableProcess.cpp  StableProcess.h  StochasticProcess.cpp  StochasticProcess.h  StudentTProcess.cpp  StudentTProcess.h  UhlenbeckOrnsteinProcess.cpp  UhlenbeckOrnsteinProcess.h  WienerProcess.cpp  WienerProcess.h  processes.h
unit_tests/TestStableRand/: TestStableRand.pro  data.h  tst_stable.cpp
variables/: BasicRandGenerator.cpp  BasicRandGenerator.h  RandomGenerators.h  RandomVariable.cpp  RandomVariable.h  RandomVariables.h
variables/continuous/: ArcsineRand.cpp  ArcsineRand.h  BetaPrimeRand.cpp  BetaPrimeRand.h  BetaRand.cpp  BetaRand.h  CauchyRand.cpp  CauchyRand.h  ChiSquaredRand.cpp  ChiSquaredRand.h  ContinuousRand.cpp  ContinuousRand.h  ErlangRand.cpp  ErlangRand.h  ExponentialRand.cpp  ExponentialRand.h  FisherSnedecorRand.cpp  FisherSnedecorRand.h  FrechetRand.cpp  FrechetRand.h  GammaRand.cpp  GammaRand.h  GeometricStableRand.cpp  GeometricStableRand.h  GumbelRand.cpp  GumbelRand.h  IrwinHallRand.cpp  IrwinHallRand.h  LaplaceRand.cpp  LaplaceRand.h  (+40 more)
(+173 files in other folders)
